--- a/configs/vanilla_vae.yaml
+++ b/configs/vanilla_vae.yaml
@@ -1,21 +1,22 @@
 model_params:
   name: 'VanillaVAE'
-  in_channels: 3
+  in_channels: 1
   latent_dim: 128
 
 exp_params:
-  dataset: celeba
-  data_path: "../../shared/Data/"
-  img_size: 64
+  dataset: xray
+  img_size: 128
   batch_size: 144 # Better to have a square number
   LR: 0.005
   weight_decay: 0.0
   scheduler_gamma: 0.95
+  val_split: 0.25
+  patch_size: 128
+  overlap: 0.25
+  manual_seed: 1265
 
 trainer_params:
-  gpus: 1
-  max_nb_epochs: 50
-  max_epochs: 30
+  max_epochs: 80
 
 logging_params:
   save_dir: "logs/"
